Change: Display name in system keyboard settings.

--- a/SPiKeyboard/Info.plist
+++ b/SPiKeyboard/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>zh_CN</string>
 	<key>CFBundleDisplayName</key>
-	<string>SPiKeyboard</string>
+	<string>SPi 双拼</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
