--- a/SPi/Settings.bundle/About.plist
+++ b/SPi/Settings.bundle/About.plist
@@ -5,6 +5,20 @@
 	<key>PreferenceSpecifiers</key>
 	<array>
 		<dict>
+			<key>DefaultValue</key>
+			<string>1.0</string>
+			<key>Key</key>
+			<string>kVersion</string>
+			<key>Title</key>
+			<string>版本</string>
+			<key>Type</key>
+			<string>PSTitleValueSpecifier</string>
+		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSGroupSpecifier</string>
+		</dict>
+		<dict>
 			<key>File</key>
 			<string>Acknowledgements</string>
 			<key>Title</key>
