Set ShuangpinTests' Host Application as SPi
This is important. I THINK if ShuangpinTests has no Host Application, it will be logic testing, which is not able to build workspace. I don't know the reason.
If set Host Application as none, get warn "xcodebuild: error: Failed to build workspace SPi with scheme SPi.	Reason: Logic Testing Unavailable"

--- a/SPi.xcworkspace/xcshareddata/xcschemes/SPi.xcscheme
+++ b/SPi.xcworkspace/xcshareddata/xcschemes/SPi.xcscheme
@@ -20,6 +20,34 @@
                ReferencedContainer = "container:SPi.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "BDEDF6951A2DCBF3000CC6B6"
+               BuildableName = "SPiTests.xctest"
+               BlueprintName = "SPiTests"
+               ReferencedContainer = "container:SPi.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "BDBB56331A49AAC7006F8D5C"
+               BuildableName = "ShuangpinTests.xctest"
+               BlueprintName = "ShuangpinTests"
+               ReferencedContainer = "container:SPi.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
