Update .gitignore to prepare track Pods and SPi.xcworkspace in version control.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,26 @@
+# Xcode
+#
+build/
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
 xcuserdata
-Pods
-candidates.sqlite
-.DS_Store
-Gemfile
-Gemfile.lock
+*.xccheckout
+*.moved-aside
+DerivedData
+*.hmap
+*.ipa
+*.xcuserstate
+
+# Jekyll
+#
 _site
 .sass-cache
+
+candidates.sqlite
+
