--- a/SPiKeyboard/Settings.bundle/Root~iphone.inApp.plist
+++ b/SPiKeyboard/Settings.bundle/Root~iphone.inApp.plist
@@ -9,6 +9,20 @@
 			<string>PSGroupSpecifier</string>
 		</dict>
 		<dict>
+			<key>IASKViewControllerClass</key>
+			<string>SPiKeyboard.InputHistoryTableViewController</string>
+			<key>IASKViewControllerSelector</key>
+			<string>init</string>
+			<key>Title</key>
+			<string>Input History</string>
+			<key>Type</key>
+			<string>PSChildPaneSpecifier</string>
+		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSGroupSpecifier</string>
+		</dict>
+		<dict>
 			<key>DefaultValue</key>
 			<string>自然码</string>
 			<key>Key</key>
