Add: Option to change the way of pinyin typing display.
Squashed commit (in branch typing_cell_position) of the following: and some small changes
commit eaa984f6ae36643fcc6894056ea493ed7c57edcd
Author: guoc <guochen42+dev@gmail.com>
Date:   Wed Jan 7 23:04:52 2015 +1100

    Fix some constraints issues.

commit 2c3a531666688a8d5725086da995e20cdef4f739
Author: guoc <guochen42+dev@gmail.com>
Date:   Wed Jan 7 19:08:40 2015 +1100

    Add option for how to display typing.

commit 64b623f3c90b473871189107a3ed0f1bf79c65fc
Author: guoc <guochen42+dev@gmail.com>
Date:   Wed Jan 7 16:04:37 2015 +1100

    Remove hide banner

commit 80109eb4df025447f840d97fbe84effcad07828c
Author: guoc <guochen42+dev@gmail.com>
Date:   Wed Jan 7 15:55:49 2015 +1100

    Hide banner when typing is empty.

commit e1fcbc43ad6c74a4178f57b463733fca1d8480cb
Author: guoc <guochen42+dev@gmail.com>
Date:   Wed Jan 7 14:48:28 2015 +1100

    Add separator line.

commit 40cca2f78ecfb037fac369d4ef7789cf6653c8c4
Author: guoc <guochen42+dev@gmail.com>
Date:   Wed Jan 7 14:48:16 2015 +1100

    Adjust "more candidates" button.

commit 0b457e216e283cf632f82e6e1b6aea41d0d963c7
Author: guoc <guochen42+dev@gmail.com>
Date:   Wed Jan 7 14:28:55 2015 +1100

    Hide typing cell again.

commit 0355ad7a9be5855763bb5167ad68c4dd38fe6cd5
Author: guoc <guochen42+dev@gmail.com>
Date:   Wed Jan 7 14:28:35 2015 +1100

    Hide extra line typing when toggle more candidates.

commit 85938d0885ce028da90eed7e67810e0c5aa3b0f2
Author: guoc <guochen42+dev@gmail.com>
Date:   Wed Jan 7 13:37:07 2015 +1100

    Small fixes and Remove hide typing cell if showTypingCell is true

commit 1201eabf0546eca23c86046d30218512087fa449
Author: guoc <guochen42+dev@gmail.com>
Date:   Wed Jan 7 01:39:32 2015 +1100

    Add extra line to display typing.

commit 19a25630b07fd2c4f5d5c3d35491325f8dccfe5d
Author: guoc <guochen42+dev@gmail.com>
Date:   Tue Jan 6 23:07:02 2015 +1100

    Add candidateCellHeight to replace "topBanner"

commit 9a05d5701f

--- a/SPiKeyboard/Settings.bundle/Root~iphone.inApp.plist
+++ b/SPiKeyboard/Settings.bundle/Root~iphone.inApp.plist
@@ -50,6 +50,22 @@
 		</dict>
 		<dict>
 			<key>FooterText</key>
+			<string>将拼音显示在候选词上方</string>
+			<key>Type</key>
+			<string>PSGroupSpecifier</string>
+		</dict>
+		<dict>
+			<key>DefaultValue</key>
+			<string>NO</string>
+			<key>Key</key>
+			<string>kShowTypingCellInExtraLine</string>
+			<key>Title</key>
+			<string>独立拼音显示</string>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+		</dict>
+		<dict>
+			<key>FooterText</key>
 			<string>连按两下空格键插入句号。</string>
 			<key>Type</key>
 			<string>PSGroupSpecifier</string>
