Add: Setting for corner bracket.

--- a/SPiKeyboard/Settings.bundle/Root~iphone.inApp.plist
+++ b/SPiKeyboard/Settings.bundle/Root~iphone.inApp.plist
@@ -86,6 +86,22 @@
 			<key>Type</key>
 			<string>PSToggleSwitchSpecifier</string>
 		</dict>
+		<dict>
+			<key>FooterText</key>
+			<string>开启该选项使用直角引号</string>
+			<key>Type</key>
+			<string>PSGroupSpecifier</string>
+		</dict>
+		<dict>
+			<key>DefaultValue</key>
+			<string>NO</string>
+			<key>Key</key>
+			<string>kCornerBracket</string>
+			<key>Title</key>
+			<string>直角引号「」</string>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+		</dict>
 	</array>
 	<key>StringsTable</key>
 	<string>Root</string>
