--- a/SPiKeyboard/Settings.bundle/Root.inApp.plist
+++ b/SPiKeyboard/Settings.bundle/Root.inApp.plist
@@ -102,6 +102,22 @@
 			<key>Type</key>
 			<string>PSToggleSwitchSpecifier</string>
 		</dict>
+		<dict>
+			<key>FooterText</key>
+			<string>“空格”滑动到“D”：删除最近一个误添加的自造词</string>
+			<key>Type</key>
+			<string>PSGroupSpecifier</string>
+		</dict>
+		<dict>
+			<key>DefaultValue</key>
+			<string>NO</string>
+			<key>Key</key>
+			<string>kGesture</string>
+			<key>Title</key>
+			<string>滑动按键功能</string>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+		</dict>
 	</array>
 	<key>StringsTable</key>
 	<string>Root</string>
